# roi-gen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  MANUAL-SETUP.md  README.md  ROI-GEN-GAME-PLAN.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_10_1700-5e48fb608876_initial_domain_schema.py
backend/app/: __init__.py  engine_main.py  main.py
backend/app/api/v1/: deps.py  router.py
backend/app/brokers/: __init__.py  base.py  credentials.py  dto.py  errors.py  ratelimit.py
backend/app/brokers/alpaca/: __init__.py  factory.py  rest.py  status.py  streams.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/engine/: __init__.py  bus.py  events.py  stage.py  strategy.py
backend/app/models/: __init__.py  base.py  enums.py  portfolio.py  strategy.py  telemetry.py  trading.py  user.py
backend/app/schemas/: account.py  portfolio.py
backend/app/services/: __init__.py  crypto.py  reconciliation.py
backend/tests/: conftest.py  test_account_api.py  test_alpaca_factory.py  test_alpaca_rest.py  test_alpaca_streams.py  test_auth.py  test_brokers_contract.py  test_config.py  test_crypto.py  test_health.py  test_models.py  test_portfolios.py  test_ratelimit.py  test_reconciliation.py
backend/tests/engine/: __init__.py  builders.py  test_event_bus.py  test_risk_controls.py  test_risk_engine.py  test_risk_sizing.py  test_risk_stage.py  test_risk_state.py  test_strategy.py
docs/: RESEARCH.md  STATE.md
(+25 files in other folders)
